--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "bubble_api"
-version = "0.0.0"
+version = "0.0.5"
 authors = [
   { name="Dylan NINA", email="settorac.nina@gmail.com" },
 ]
@@ -17,9 +17,9 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "requests==2.28.*",
-    "pydantic==1.10.*",
-    "pandas==1.5.*",
+    "requests~=2.28.1",
+    "pydantic~=1.10.4",
+    "pandas~=1.5.2",
 ]
 
 [project.urls]
