--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "bubble_api"
-version = "0.0.5"
+version = "0.0.1"
 authors = [
   { name="Dylan NINA", email="settorac.nina@gmail.com" },
 ]
@@ -17,9 +17,9 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "requests~=2.28.1",
-    "pydantic~=1.10.4",
-    "pandas~=1.5.2",
+    'requests >= 2.28.1, < 2.29.0',
+    'pydantic >= 1.10.4, < 1.11.0',
+    'pandas >= 1.5.2, < 1.6.0',
 ]
 
 [project.urls]
