--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,12 @@ build-backend = "hatchling.build"
 
 [project]
 name = "bubble_api"
-version = "0.3.1"
+version = "0.4.0"
 authors = [
   { name="Dylan NINA", email="settorac.nina@gmail.com" },
+    {name="Mathis Bourdin", email="mathisbrdn@gmail.com"}
 ]
-description = "Interactions with Bubble.io in Python made easy"
+description = "Interactions with Bubble.io API in Python made easy !"
 readme = "README.md"
 requires-python = ">=3.8"
 classifiers = [
@@ -17,9 +18,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    'requests >= 2.28.1, < 2.29.0',
-    'pydantic >= 1.10.4, < 1.11.0',
-    'pandas >= 1.5.2, < 1.6.0',
+    'requests',
 ]
 
 [project.urls]
