--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools>=61"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "bubble_api"
-version = "0.4.0"
+version = "0.4.0.dev"
 authors = [
     { name="Dylan NINA", email="settorac.nina@gmail.com" },
     { name="Mathis Bourdin", email="mathisbrdn@gmail.com" },
@@ -12,9 +12,12 @@ authors = [
 description = "Interactions with Bubble.io API in Python made easy !"
 readme = "README.md"
 requires-python = ">=3.8"
-
 classifiers = [
+    "Programming Language :: Python",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
@@ -22,6 +25,9 @@ classifiers = [
 dependencies = [
     'requests',
 ]
+
+[tool.setuptools]
+packages = ["bubble_api"]
 
 [project.urls]
 "Homepage" = "https://github.com/settorac-nina/bubble-api"
