--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,12 +6,33 @@ repos:
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
     -   id: name-tests-test
+    -   id: check-ast
+    -   id: debug-statements
+
+-   repo: https://github.com/hadialqattan/pycln
+    rev: v0.0.1-beta.3
+    hooks:
+    -   id: pycln
+
+-   repo: https://github.com/pycqa/isort
+    rev: 5.12.0
+    hooks:
+      - id: isort
+
+-   repo: https://github.com/asottile/pyupgrade
+    rev: v3.4.0
+    hooks:
+    -   id: pyupgrade
+        args: [--py39-plus]
+
 -   repo: https://github.com/psf/black
     rev: 22.10.0
     hooks:
     -   id: black
+
 -   repo: https://github.com/PyCQA/flake8
     rev: 6.0.0
     hooks:
     - id: flake8
       language_version: python3
+      additional_dependencies: [flake8-print]
