--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -23,8 +23,15 @@ jobs:
 
       - name: Install
         run: |
+          python -m pip install --upgrade pip
           pip install -e .
           pip install -r requirements.test.txt
 
       - name: Run tests
         run: pytest tests/unit --no-cov
+
+      - name: Install build
+        run: pip install build
+
+      - name: Build package
+        run: python -m build
