--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,7 +10,7 @@ repos:
     -   id: debug-statements
 
 -   repo: https://github.com/hadialqattan/pycln
-    rev: v0.0.1-beta.3
+    rev: v2.1.5
     hooks:
     -   id: pycln
 
